--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,11 +30,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures {
         compose true
@@ -51,12 +51,12 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.activity:activity-compose:1.7.1'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.0.0-alpha11'
+    implementation 'androidx.compose.material3:material3:1.1.0-rc01'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -64,15 +64,15 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 
-    implementation "androidx.compose.material3:material3:1.1.0-alpha04"
-    implementation("androidx.navigation:navigation-compose:2.6.0-alpha04")
+    implementation "androidx.compose.material3:material3:1.1.0-rc01"
+    implementation("androidx.navigation:navigation-compose:2.6.0-beta01")
 
     implementation "com.google.dagger:hilt-android:2.45"
     kapt "com.google.dagger:hilt-compiler:2.45"
 
     implementation("io.coil-kt:coil-compose:2.2.2")
 
-    implementation "androidx.compose.material:material-icons-extended:1.3.1"
+    implementation "androidx.compose.material:material-icons-extended:1.4.3"
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -84,9 +84,11 @@ dependencies {
     implementation 'io.realm.kotlin:library-sync:1.7.0'// Add to use Device Sync
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4' // Add to use coroutines with the SDK
 
-    implementation "com.google.accompanist:accompanist-pager:0.24.3-alpha"
+    implementation "com.google.accompanist:accompanist-pager:0.29.2-rc"
     implementation "com.google.accompanist:accompanist-pager-indicators:0.19.0"
     implementation 'com.google.accompanist:accompanist-swiperefresh:0.24.3-alpha'
     implementation 'com.google.accompanist:accompanist-flowlayout:0.24.13-rc'
-    implementation "com.google.accompanist:accompanist-permissions:0.24.3-alpha"
+    implementation "com.google.accompanist:accompanist-permissions:0.29.1-alpha"
+
+    implementation "com.airbnb.android:lottie-compose:6.0.0"
 }
